<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fundoapp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/redefinir"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtSenhaAntiga"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:background="@color/campoBackground"
        android:hint="@string/velha"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtSenhaNova"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtSenhaAntiga"
        android:layout_marginTop="50dp"
        android:background="@color/campoBackground"
        android:hint="@string/nova"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtConfirmaSenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtSenhaNova"
        android:layout_marginTop="50dp"
        android:background="@color/campoBackground"
        android:hint="@string/confirma"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/textHint"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnAltera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/enviar"
        android:textColor="@color/textWhite"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
