<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fundoapp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sucessoAgendado"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="22dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/salvarComprovante"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/voltarPrincipal"
            android:textColor="@color/textWhite"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/lnFourth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lnThird"
            android:layout_marginTop="36dp">

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/btnGaleria"
                android:layout_weight="1"
                android:background="@drawable/i_email" />

            <Button
                android:id="@+id/btnPDF"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignTop="@+id/btnEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:background="@drawable/i_pdf"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnGaleria"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:background="@drawable/i_galeria"
                android:textSize="15dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView7"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="10000dp"
            android:text="@string/salvarPdf"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lnFourth"
            android:text="@string/enviarEmail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:text="@string/salvarGaleria"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />
    </RelativeLayout>
</LinearLayout>