<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_fundoapp">

    <TextView
        android:id="@+id/txtUnique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/erro"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/btnDesmarcar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/desmarcar"
        android:textColor="@color/textWhite"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/animal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtUnique"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:background="@color/servBackground"/>

    <TextView
        android:id="@+id/txtAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/txtPetshop"
        android:layout_alignStart="@+id/txtPetshop"
        android:textAlignment="center"
        android:background="@color/menuBackground"/>

    <TextView
        android:text="@string/petshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtAnimal"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/servBackground"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtPetshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/menuBackground"/>

    <TextView
        android:text="@string/enderecodois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtPetshop"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/servBackground"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textSize="19sp"
        android:textColor="@color/text"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/menuBackground"/>

    <TextView
        android:text="@string/servico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtEndereco"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/servBackground"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtServico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/textView18"
        android:layout_alignLeft="@+id/txtEndereco"
        android:layout_alignStart="@+id/txtEndereco"
        android:textAlignment="center"
        android:background="@color/menuBackground"/>

    <TextView
        android:text="@string/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtServico"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/servBackground"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="@string/preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtData"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/servBackground"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/menuBackground"/>

    <TextView
        android:id="@+id/txtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:textAlignment="center"
        android:background="@color/menuBackground"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>