<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_fundoapp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@layout/btn_redondo"
        app:srcCompat="@color/cardview_shadow_end_color" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp" />

    <TextView
        android:text="@string/nomedois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:layout_above="@+id/txtEmail"
        android:layout_alignLeft="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:text="@string/emaildois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_alignTop="@+id/txtEmail"
        android:layout_alignLeft="@+id/textView26"
        android:layout_alignStart="@+id/textView26"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:text="@string/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView26"
        android:layout_alignBottom="@+id/txtSexo"
        android:layout_alignLeft="@+id/textView27"
        android:layout_alignStart="@+id/textView27"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:text="@string/enderecodois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView29"
        android:layout_alignTop="@+id/txtEndereco"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:text="@string/celulardois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView28"
        android:layout_alignTop="@+id/txtCelular"
        android:layout_alignLeft="@+id/textView29"
        android:layout_alignStart="@+id/textView29"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:text="@string/telefonedois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView27"
        android:layout_alignBottom="@+id/txtTelefone"
        android:layout_alignLeft="@+id/textView28"
        android:layout_alignStart="@+id/textView28"
        android:textColor="@color/text"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtSexo"
        android:layout_alignLeft="@+id/txtSexo"
        android:layout_alignStart="@+id/txtSexo" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtNome"
        android:layout_alignLeft="@+id/txtNome"
        android:layout_alignStart="@+id/txtNome"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtEmail"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtTelefone"
        android:layout_alignLeft="@+id/txtTelefone"
        android:layout_alignStart="@+id/txtTelefone" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/erro"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:layout_below="@+id/txtCelular"
        android:layout_alignLeft="@+id/txtCelular"
        android:layout_alignStart="@+id/txtCelular" />


</RelativeLayout>