<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ic_fundoapp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblNot"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/sw_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adnotificacao"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/sw_breve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/breve"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/notificacoes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp"
        android:textStyle="bold" />
</RelativeLayout>